--- a/popup.html
+++ b/popup.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <head>
 <script src='popup.js'></script>
@@ -15,4 +16,19 @@
 </table>
 <button id=download1>Download All!</button>
 </body>
+</html>
+-->
+<!doctype html>
+<html>
+  <head>
+    <script src='firebase.js'></script>
+    <script src='jquery.min.js'></script>
+    <link rel='stylesheet' type='text/css' href='example.css'>
+  </head>
+  <body>
+    <div id='messagesDiv'></div>
+    <input type='text' id='nameInput' placeholder='Name'>
+    <input type='text' id='messageInput' placeholder='Message'>
+    <script src='chat.js'></script>
+  </body>
 </html>
