--- a/popup.html
+++ b/popup.html
@@ -23,11 +23,12 @@
   <head>
     <script src='firebase.js'></script>
     <script src='jquery.min.js'></script>
+    <script src="socket.io-1.0.6.js"></script>
+    <script src="chat.js"></script>
     <link rel='stylesheet' type='text/css' href='example.css'>
   </head>
   <body>
     <div id='messagesDiv'></div>
-    <input type='text' id='nameInput' placeholder='Name'>
     <input type='text' id='messageInput' placeholder='Message'>
     <script src='chat.js'></script>
   </body>
