--- a/popup.html
+++ b/popup.html
@@ -28,6 +28,7 @@
     <link rel='stylesheet' type='text/css' href='example.css'>
   </head>
   <body>
+    <h3 style="margin-top: 1px; margin-bottom: 5px;">CS 101</h3>
     <div id='messagesDiv'></div>
     <input type='text' id='messageInput' placeholder='Message'>
     <script src='chat.js'></script>
