made it look nicer

--- a/popup.html
+++ b/popup.html
@@ -27,10 +27,9 @@
     <script src="chat.js"></script>
     <link rel='stylesheet' type='text/css' href='example.css'>
   </head>
-  <body>
+  <body style="zoom: 1;height: 500px;">
     <h3 id='class_name' style="margin-top: 1px; margin-bottom: 5px;"></h3>
     <div id='messagesDiv'></div>
     <input type='text' id='messageInput' placeholder='Message'>
-    <script src='chat.js'></script>
   </body>
 </html>
