--- a/popup.html
+++ b/popup.html
@@ -24,6 +24,7 @@
     <script src='firebase.js'></script>
     <script src='jquery.min.js'></script>
     <script src="socket.io-1.0.6.js"></script>
+    <script src="moment.js"></script>
     <script src="chat.js"></script>
     <link rel='stylesheet' type='text/css' href='example.css'>
   </head>
