video button and things

--- a/popup.html
+++ b/popup.html
@@ -30,7 +30,8 @@
   </head>
   <body style="zoom: 1;height: 500px;">
     <h3 id='class_name' style="margin-top: 1px; margin-bottom: 5px;"></h3>
-    <div id='messagesDiv'></div>
+    <button>Video Chat</button>
+    <div id='messagesDiv' style="height: 450px;"></div>
     <input type='text' id='messageInput' placeholder='Message'>
   </body>
 </html>
