opening a new window works

--- a/popup.html
+++ b/popup.html
@@ -30,7 +30,7 @@
   </head>
   <body style="zoom: 1;height: 500px;">
     <h3 id='class_name' style="margin-top: 1px; margin-bottom: 5px;"></h3>
-    <button>Video Chat</button>
+    <button id='videoChatButton' type="button" value="tab">Video Chat</button>
     <div id='messagesDiv' style="height: 450px;"></div>
     <input type='text' id='messageInput' placeholder='Message'>
   </body>
