--- a/popup.html
+++ b/popup.html
@@ -30,8 +30,8 @@
   </head>
   <body style="zoom: 1;height: 500px;">
     <h3 id='class_name' style="margin-top: 1px; margin-bottom: 5px;"></h3>
-    <button id='videoChatButton' type="button" value="tab">Video Chat</button>
-    <div id='messagesDiv' style="height: 450px;"></div>
+    <button id='videoChatButton' type="button" value="tab" tabindex="-1">Video Chat</button>
+    <div id='messagesDiv' style="height: 450px;" autofocus="autofocus"></div>
     <input type='text' id='messageInput' placeholder='Message'>
   </body>
 </html>
