--- a/popup.html
+++ b/popup.html
@@ -7,8 +7,8 @@
     <script src="chat.js"></script>
     <link rel='stylesheet' type='text/css' href='example.css'>
   </head>
-  <body style="zoom: 1;height: 500px;">
-    <h3 id='class_name' style="margin-top: 1px; margin-bottom: 5px;"></h3>
+  <body style="zoom: 1;height: 500px; background: #3e7aab;">
+    <h3 id='class_name' style="margin-top: 1px; margin-bottom: 5px; color: white;">Chat</h3>
     <button id='videoChatButton' type="button" value="tab" tabindex="-1">Video Chat</button>
     <div id='messagesDiv' style="height: 450px;" autofocus="autofocus"></div>
     <input type='text' id='messageInput' placeholder='Message'>
