--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
     <script src="socket.io-1.0.6.js"></script>
     <script src="moment.js"></script>
     <script src="chat.js"></script>
-    <link rel='stylesheet' type='text/css' href='example.css'>
+    <link rel='stylesheet' type='text/css' href='popup.css'>
   </head>
   <body style="zoom: 1;height: 500px; background: #3e7aab;">
     <h3 id='class_name' style="margin-top: 1px; margin-bottom: 5px; color: white;">Chat</h3>
